examples/test/testpolicy3183.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3183
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key46: value21
      key34: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value11
          key16: value10
          key22: value47
      podSelector:
        matchLabels:
          key41: value2
          key27: value47
